# askda-phys

./: .gitignore  PLAN.md  README.md  pyproject.toml
.askda/: web.json
askda_phys/: __init__.py  cli.py  config.py  models.py  scoring.py
askda_phys/agents/: __init__.py  advisor.py  archivist.py  base.py  grounded.py  interpreter.py  maniac.py  memeticist.py  sceptic.py  supervisor.py  tooling.py
askda_phys/agents/cafeteam/: __init__.py  interpreter.py  maniac.py  sceptic.py
askda_phys/agents/panelone/: __init__.py  advisor.py  bureaucrat.py  internal.py  revtwo.py
askda_phys/agents/pubteam/: __init__.py  critic.py  leangrad.py  peer.py
askda_phys/knowledge/: __init__.py  build.py  descriptions.py  memetic.py  ranking.py  semantic_links.py  web.py
askda_phys/orchestration/: __init__.py  pipeline.py  run.py  stages.py
askda_phys/tools/: __init__.py  data.py  paperfetch.py  paperqa.py  physlib.py  pyexec.py  reader.py  search.py
notebooks/: test.ipynb
tests/: test_grounding_and_lean.py  test_smoke.py
